--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ms-gestion-faenas
 
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=/app/wallet
+spring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=/app/oracle_wallet
 spring.datasource.username=ADMIN
 spring.datasource.password=123456Qwerty@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
