--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ms-gestion-faenas
-
+server.port=8080
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=/app/oracle_wallet
