--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
-#logging.level.org.hibernate=DEBUG
-#logging.level.com.zaxxer.hikari=DEBUG
-#logging.level.java.sql=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.java.sql=DEBUG
 logging.level.root=ERROR
 
