--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=ms-gestion-faenas
 server.port=8080
+server.ssl.key-alias=capstone
+server.ssl.key-store=classpath:capstone.jks
+server.ssl.key-store-password=capstone
+server.ssl.key-store-type=JKS
+
+# Redirigir de HTTP a HTTPS
+spring.main.web-application-type=servlet
+server.error.whitelabel.enabled=false
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=/app/oracle_wallet
