--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=ms-gestion-faenas
-server.port=8080
-server.ssl.key-alias=capstone
-server.ssl.key-store=classpath:capstone.jks
+server.port=443
+
+#server.ssl.key-alias=capstone
+#server.ssl.key-store=classpath:capstone.jks
+#server.ssl.key-store-password=capstone
+#server.ssl.key-store-type=JKS
+
+server.ssl.key-store=classpath:sistemagfcl.p12
 server.ssl.key-store-password=capstone
-server.ssl.key-store-type=JKS
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=sistemagfcl
 
 # Redirigir de HTTP a HTTPS
 spring.main.web-application-type=servlet
