--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ms-gestion-faenas
-server.port=443
+server.port=8080
 
 #server.ssl.key-alias=capstone
 #server.ssl.key-store=classpath:capstone.jks
@@ -17,7 +17,7 @@ server.error.whitelabel.enabled=false
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=/app/oracle_wallet
-#spring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=C:/Users/HP/Desktop/Capstone/Wallet_DbCapstone
+#yspring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=C:/Users/HP/Desktop/Capstone/Wallet_DbCapstone
 spring.datasource.username=ADMIN
 spring.datasource.password=123456Qwerty@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
