--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,14 @@ server.port=8080
 #server.ssl.key-store-password=capstone
 #server.ssl.key-store-type=JKS
 
-server.ssl.key-store=classpath:sistemagfcl.p12
-server.ssl.key-store-password=capstone
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=sistemagfcl
+#server.ssl.key-store=classpath:sistemagfcl.p12
+#server.ssl.key-store-password=capstone
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=sistemagfcl
 
 # Redirigir de HTTP a HTTPS
-spring.main.web-application-type=servlet
-server.error.whitelabel.enabled=false
+#spring.main.web-application-type=servlet
+#server.error.whitelabel.enabled=false
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@dbcapstone_high?TNS_ADMIN=/app/oracle_wallet
